[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diagnyx"
version = "0.1.0"
description = "Diagnyx SDK for LLM tracking and monitoring"
readme = "README.md"
authors = [{ name = "Diagnyx", email = "support@diagnyx.io" }]
license = { text = "MIT" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["diagnyx", "llm", "monitoring", "tracking", "ai", "openai", "anthropic"]
dependencies = [
    "httpx>=0.24.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.18.0"]
all = ["openai>=1.0.0", "anthropic>=0.18.0"]

[project.urls]
Homepage = "https://diagnyx.io"
Documentation = "https://docs.diagnyx.io"
Repository = "https://github.com/diagnyx/diagnyx-python"

[tool.setuptools.packages.find]
where = ["."]
include = ["diagnyx*"]

[tool.ruff]
target-version = "py38"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["diagnyx"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
