[package]
name = "diagnyx"
version = "0.1.0"
edition = "2021"
authors = ["Diagnyx <hello@diagnyx.com>"]
description = "Rust SDK for LLM cost tracking and analytics with Diagnyx"
license = "MIT"
repository = "https://github.com/diagnyxai/diagnyx-rust"
homepage = "https://diagnyx.io"
documentation = "https://docs.rs/diagnyx"
readme = "README.md"
keywords = ["llm", "ai", "openai", "anthropic", "monitoring", "observability"]
categories = ["api-bindings", "development-tools"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "sync", "time"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.5"

[features]
default = []
openai = []
anthropic = []
